--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,6 +8,11 @@
     --font-size: 16px;
     --animation-speed: 1;
 }
+
+@function getAnimationDuration($duration: number){
+    @return calc($duration * var(--animation-speed));
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -37,37 +42,92 @@ a{
             text-shadow: 0 1px 3px var(--shadow-colo);
         }
     }
+    .nav-links{
+        a{
+            margin-left: 1em;
+            color: var(--text-light);
+            letter-spacing: 2px;
+            text-transform: uppercase;
+            position: relative;
+            &::before{
+                content: "";
+                display: inline-block;
+                height: 3px;
+                width: 100%;
+                background-color: var(--primary-color);
+                position: absolute;
+                bottom: -3px;
+                left: 0;
+                transform: scaleX(0);
+                transition: transform calc(var(--animation-speed) * 0.2s) ease-in-out;
+            }
+            &:hover{
+                &::before{
+                    transform: scaleX(1);
+                }
+            }
+            &.active{
+                color: var(--primary-color);
+                font-weight: bold;
+            }
+        }
+    }
+    .sidebar-btn{
+        height: 28px;
+        width: 30px;
+        position: relative;
+        display: none;
+        .bar{
+            height: 6px;
+            width: 100%;
+            background-color: var(--text-color);
+            position: absolute;
+            border-radius: 5px;
+            transition: transform getAnimationDuration(.5s) ease-in-out;
+            &:nth-child(1){
+                top: 0;
+            }
+            &:nth-child(2){
+                top: 50%;
+                transform-origin: right;
+                transform: scaleX(.8) translateY(-50%);
+            }
+            &:nth-child(3){
+                top: 100%;
+                transform: translateY(-100%);
+            }
+
+        }
+        &.active{
+            .bar{
+                transform-origin: center;
+                top: 50%;
+                &:nth-child(1){
+                    transform: translate(0, -50%) scale(1) rotate(45deg) ;
+                }
+                &:nth-child(2){
+                    transform: scale(0) translate(-50%)  ;
+                }
+                &:nth-child(3){
+                    transform: translate(0, -50%) scale(1) rotate(-45deg) ;
+                }
+            }
+        }
+    }
 }
+
 .container{
     padding-inline: 15vw;
 }
-.nav-links{
-    a{
-        margin-left: 1em;
-        color: var(--text-light);
-        letter-spacing: 2px;
-        text-transform: uppercase;
-        position: relative;
-        &::before{
-            content: "";
-            display: inline-block;
-            height: 3px;
-            width: 100%;
-            background-color: var(--primary-color);
-            position: absolute;
-            bottom: -3px;
-            left: 0;
-            transform: scaleX(0);
-            transition: transform calc(var(--animation-speed) * 0.2s) ease-in-out;
+
+@media screen and (max-width: 786px) {
+    .navbar{
+        .nav-links{
+            display: none;
         }
-        &:hover{
-            &::before{
-                transform: scaleX(1);
-            }
-        }
-        &.active{
-            color: var(--primary-color);
-            font-weight: bold;
+        .sidebar-btn{
+            display: block;
         }
     }
+    
 }
