--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -87,10 +87,10 @@ img{
     padding-block: 3vw
 }
 @import "partials/improveskills";
-
 @import "partials/herosect";
 @import "partials/navvar";
 @import "partials/animations";
+@import "partials/quotes";
 .container{
     padding-inline: 15vw;
 }
