--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -91,6 +91,7 @@ img{
 @import "partials/navvar";
 @import "partials/animations";
 @import "partials/quotes";
+@import "partials/chefs";
 .container{
     padding-inline: 15vw;
 }
