--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -86,12 +86,15 @@ img{
 .main{
     padding-block: 3vw
 }
+
 @import "partials/improveskills";
 @import "partials/herosect";
 @import "partials/navvar";
 @import "partials/animations";
 @import "partials/quotes";
 @import "partials/chefs";
+@import "partials/footer";
+
 .container{
     padding-inline: 15vw;
 }
