finished recipes page

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -94,6 +94,8 @@ img{
 @import "partials/quotes";
 @import "partials/chefs";
 @import "partials/footer";
+@import "partials/recipe-section";
+@import "partials/previous-search";
 
 .container{
     padding-inline: 25vw;
